# heyhey

./: .flake8  Dockerfile  LICENSE  README.md  pyproject.toml  zz-local-ci.sh
.github/: copilot-instructions.md
.github/workflows/: ci-pipeline.yml
app/: app.py
argo/applications/: heyhey-prod.yaml  heyhey.yaml
helm/: README.md
helm/heyhey/: Chart.yaml  values.yaml
helm/heyhey/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
heyhey/: app.py
tests/: test_app.py
