[project]
name = "heyhey"
version = "0.1.0"
description = "Hey Hey - A simple Flask webapp"
authors = [
    {name = "heyhey"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
flake8 = "^7.3.0"
